# phoenix

./: .gitignore  Cargo.toml
phoenix/: Cargo.toml
phoenix/src/: api.rs  axum_ructe.rs  build.rs  config.rs  main.rs  state.rs  types.rs
phoenix/src/api/: v1.rs
phoenix/templates/: error.rs.html  index.rs.html
